--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,8 +25,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: 安装 Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: 安装依赖
+        run: npm install
 
       - name: Build Quartz
         run: npx quartz build
@@ -34,7 +39,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # 只上传 Quartz 构建输出的 public 文件夹
           path: './public'
 
       - name: Deploy to GitHub Pages
