--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,16 +30,21 @@ jobs:
         with:
           node-version: 20
 
-      - name: Cache Node.js modules
+      - name: Use official npm registry
+        run: npm config set registry https://registry.npmjs.org/
+
+      - name: Cache npm modules
         uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: |
+            ~/.npm
+            node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefer-offline --no-audit --progress=false
 
       - name: Build Quartz
         run: npx quartz build
@@ -50,7 +55,6 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # 上传 public 文件夹，确保 index.html 在根目录
           path: './public'
 
       - name: Deploy to GitHub Pages
