--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-# Quartz 4.0 GitHub Pages 部署 workflow
+# Optimized Quartz 4.0 GitHub Pages Deployment with Auto-Diagnostics
 name: Deploy Quartz 4.0 to GitHub Pages
 
 on:
@@ -21,30 +21,88 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+    steps:
+      - name: 🧩 Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1   # 浅克隆更快
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'     # 自动缓存依赖
 
-      - name: Install dependencies
-        run: npm install
+      - name: 🛰️ Use official npm registry
+        run: npm config set registry https://registry.npmjs.org/
 
-      - name: Build Quartz
-        run: npx quartz build
+      - name: 📦 Install dependencies
+        run: npm ci --prefer-offline --no-audit --progress=false
 
-      - name: Verify build output
-        run: ls -R public
+      - name: 🗂️ Verify content folder
+        run: |
+          echo "Checking content folder..."
+          if [ ! -d "content" ]; then
+            echo "⚠️  ERROR: content folder not found!"
+            exit 1
+          fi
+          ls -lah content | head -20
 
-      - name: Upload Pages artifact
+      - name: 🧱 Cache Quartz build
+        uses: actions/cache@v4
+        with:
+          path: |
+            .quartz/cache
+            public
+          key: quartz-${{ hashFiles('content/**', 'quartz.config.js', 'package-lock.json') }}
+          restore-keys: quartz-
+
+      - name: 🧭 Check if rebuild needed
+        id: check_changes
+        run: |
+          echo "Checking for changes..."
+          git fetch origin main --depth=2 || true
+          if git diff --quiet HEAD^ HEAD content quartz.config.js; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: 🧩 Debug before build
+        run: echo "✅ Starting Quartz build process..."
+
+      - name: 🧰 Build Quartz (with timeout & diagnostics)
+        if: steps.check_changes.outputs.changes == 'true'
+        timeout-minutes: 6  # 自动超时保护
+        run: |
+          set -x
+          echo "🧱 Running npx quartz build..."
+          # 禁用交互、减少日志量，防止卡死
+          npx --yes quartz build --no-interactive --silent || echo "⚠️ Build command failed"
+          echo "✅ Quartz build finished successfully."
+
+      - name: 🧩 Verify build output
+        run: |
+          echo "Checking build output..."
+          if [ ! -d "public" ]; then
+            echo "⚠️  ERROR: 'public' directory not found after build!"
+            exit 1
+          fi
+          ls -lah public | head -20
+
+      - name: 📤 Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # 上传 public 文件夹，确保 index.html 在根目录
           path: './public'
 
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: ✅ Deployment summary
+        if: always()
+        run: |
+          echo "🏁 Deployment finished!"
+          echo "Quartz cache status:"
+          du -sh .quartz/cache || echo "No cache directory"
